# wordler

./: .env.example  .gitignore  README.md  play.py  pyproject.toml  train.py
assets/: word-list.txt
tests/: test_actor_model.py  test_attention.py  test_environment.py
wordler/: constants.py  schemas.py
wordler/environment/: __init__.py  environment.py  settings.py
wordler/models/: __init__.py  actor_model.py  positional_encode.py  self_attn.py  settings.py
wordler/training/: run_train.py  settings.py  trainer.py
