[project]
name = "wordler"
version = "0.0.1"
description = "Bot to play wordle!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0,<9",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
