[project]
name = "wordler"
version = "0.0.1"
description = "Bot to play wordle!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3,<0.8",
    "matplotlib>=3.10.8",
    "numpy==2.2.5",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "torch>=2.7.0,<3",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0,<9",
    "pytest>=8.3,<9",
    "ruff>=0.14.11",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.ruff]
line-length = 80
